# haskell-course

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Changes.md  Dockerfile  FAQ.md  README.md
.devcontainer/: Dockerfile
ES-translation/: PreguntasFrecuentes.md  README.md
ES-translation/Lecciones/: 01-Introducción-a-haskell.ipynb
Homework/Homework01/: .Homework01.hs.swo  .Homework01.hs.swp  Homework01.hs
Homework/Homework02/: .Homework02.hs.swp  Homework02.hs
Homework/Homework03/: Homework03.hs
Homework/Homework14/ForestGameHWSolution/: CHANGELOG.md  ForestGameHWSolution.cabal
Homework/Homework14/ForestGameHWSolution/app/: Main.hs
Homework/Homework14/ForestGameHWSolution/src/Forest/: Level1.hs
Homework/Homework14/ForestGameHWSolution/src/User/Actions/: Battle.hs  Move.hs
Homework/Homework15/: CHANGELOG.md  Homework15.cabal  LICENSE  README.md  hye.yml
Homework/Homework15/app/: Homework15A.hs
Homework/Homework15/src/: Homework15B.hs
images/: diagrams.drawio
lessons/: 01-Introduction-to-haskell.ipynb  05-Improving-and-combining-functions.ipynb  06-Dealing-with-lists.ipynb  1-Introduction-to-haskell.ipynb  10-Basic-IO.ipynb  11-Basic-IO.ipynb  12-Installing-Haskell-and-first-program.ipynb  13-Modules.ipynb  14-Cabal_and_language_extensions.ipynb  15-Handling-Errors.ipynb  3-Pattern-matching-and-how-to-write-functions.ipynb  3-Pattern-matching-let-where.ipynb  4-Improving-and-combining-functions copy.ipynb  5-Recursion.ipynb  7-Creating-Type-Classes.ipynb  8-Basic-IO.ipynb  8-Creating-Types.ipynb  9-Creating-Type-Classes.ipynb  rise.css
(+9 files in other folders)
